Fixed clipped badge in the sidebar menu

--- a/app/media/styles/app.less
+++ b/app/media/styles/app.less
@@ -38,7 +38,8 @@
 
     .ant-menu-item {
       height: @sider-width;
-      padding: 10px 0 12px 0 !important;
+      margin-top: 2px;
+      padding: 12px 0 !important;
       text-align: center;
 
       .menu-item-label {
